--- a/src/main/resources/application.lc.yml
+++ b/src/main/resources/application.lc.yml
@@ -5,7 +5,7 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
   datasource:
     url: jdbc:mysql://localhost:3306/shopping?useSSL=false
     username: root
@@ -14,4 +14,4 @@ spring:
 
 
 server:
-  port: 8080
+  port: 8088
