--- a/customer-service/src/main/resources/application.yml
+++ b/customer-service/src/main/resources/application.yml
@@ -1,5 +1,9 @@
 
 spring:
+  security:
+    user:
+      name: user
+      password: pass
   jpa:
     properties:
       hibernate:
@@ -7,7 +11,7 @@ spring:
     hibernate:
       ddl-auto: create
   datasource:
-    url: jdbc:mysql://localhost:3306/shopping?useSSL=false
+    url: jdbc:mysql://localhost:3306/customer-service?useSSL=false
     username: root
     password: P@ssw0rd
     driver-class-name: com.mysql.cj.jdbc.Driver
