--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     hibernate:
       ddl-auto: create
   datasource:
-    url: jdbc:mysql://localhost:3306/shopping?useSSL=false
+    url: jdbc:mysql://localhost:3306/product-service?useSSL=false
     username: root
     password: P@ssw0rd
     driver-class-name: com.mysql.cj.jdbc.Driver
