--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -11,7 +11,8 @@ spring:
     username: root
     password: P@ssw0rd
     driver-class-name: com.mysql.cj.jdbc.Driver
-
+  application:
+    name: product-service
 
 server:
   port: 8181
