--- a/shopping-cart-service/pom.xml
+++ b/shopping-cart-service/pom.xml
@@ -5,7 +5,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.12</version>
+<!--        <version>2.7.12</version>-->
+        <version>3.0.6</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>edu.miu</groupId>
@@ -15,7 +16,8 @@
     <description>shopping-cart-service</description>
     <properties>
         <java.version>17</java.version>
-        <spring-cloud.version>2021.0.7</spring-cloud.version>
+        <spring-cloud.version>2022.0.2</spring-cloud.version>
+<!--        <spring-cloud.version>2021.0.7</spring-cloud.version>-->
     </properties>
     <dependencies>
 <!--        <dependency>-->
@@ -34,10 +36,15 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
 <!--        <dependency>-->
 <!--            <groupId>com.okta.spring</groupId>-->
 <!--            <artifactId>okta-spring-boot-starter</artifactId>-->
-<!--            <version>2.1.6</version>-->
+<!--            <version>3.0.3</version>-->
 <!--        </dependency>-->
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.cloud</groupId>-->
@@ -54,6 +61,13 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>com.fasterxml.jackson.core</groupId>-->
+<!--            <artifactId>jackson-databind</artifactId>-->
+<!--            <version>2.14.2</version>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
