--- a/shopping-cart-service/src/main/resources/application.yml
+++ b/shopping-cart-service/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/shopping?useSSL=false
     username: root
-    password: P@ssw0rd
+    password: password
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 
