--- a/shopping-cart-service/src/main/resources/application.yml
+++ b/shopping-cart-service/src/main/resources/application.yml
@@ -1,5 +1,13 @@
 
 spring:
+  cloud:
+    openfeign:
+      client:
+        config:
+          default:
+            connectTimeout: 5000
+            readTimeout: 5000
+            loggerLevel: basic
   security:
     user:
       name: admin
