--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>edu.miu</groupId>
-    <artifactId>productResponse-service</artifactId>
+    <artifactId>product-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>productResponse-service</name>
-    <description>productResponse-service</description>
+    <name>product-service</name>
+    <description>product-service</description>
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2021.0.7</spring-cloud.version>
