--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/product-service?useSSL=false
     username: root
-    password:
+    password: P@ssw0rd
     driver-class-name: com.mysql.cj.jdbc.Driver
   application:
     name: product-service
