--- a/shopping-cart-service/src/main/resources/application.yml
+++ b/shopping-cart-service/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
           implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
         dialect: org.hibernate.dialect.MySQL5Dialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: create-drop
   datasource:
     url: jdbc:mysql://localhost:3306/shopping?useSSL=false
     username: root
