--- a/customer-service/src/main/resources/application.yml
+++ b/customer-service/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/customer-service?useSSL=false&allowPublicKeyRetrieval=True
     username: root
-    password: password
+    password: P@ssw0rd
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 
