--- a/shopping-cart-service/src/main/resources/application.yml
+++ b/shopping-cart-service/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/shopping?useSSL=false
     username: root
-    password: password
+    password: P@ssw0rd
     driver-class-name: com.mysql.cj.jdbc.Driver
   application:
     name: shopping-cart-service
