--- a/shopping-cart-service/src/main/resources/application.yml
+++ b/shopping-cart-service/src/main/resources/application.yml
@@ -8,10 +8,10 @@ spring:
             connectTimeout: 5000
             readTimeout: 5000
             loggerLevel: basic
-  security:
-    user:
-      name: admin
-      password: password
+#  security:
+#    user:
+#      name: admin
+#      password: password
   jpa:
     properties:
       hibernate:
